Виправлено адаприв крім: хедер, меню бургер, портфоліо

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <section class="hero">
                 <h1 class="hero__title">эффективные решения<br>для вашего бизнеса</h1>
                 <button data-modal-open class="hero__modal" type="button">Заказать услугу</button>
-            </section>      
+            </section>    
             <section class="section warranty">
                 <div class="container">
                     <h2 class="title-none"></h2>
@@ -98,7 +98,7 @@
                                 </svg>
                             </div>
                             <h3 class="section-text">Внимание к деталям</h3>
-                            <p class="waranty__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                            <p class="warranty__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
                         <li class="warranty__advantage">
                             <div class="warranty__icons">
@@ -135,15 +135,15 @@
                     <h2 class="section-title">Чем мы занимаемся</h2>
                     <ul class="services__list">
                         <li class="services__item">
-                            <img class="services__img" src="./images/img.jpg" alt="Програмирование" width="370">
+                            <img srcset="./images/img.jpg 1x, ./images/img_2x.jpg 2x" class="services__img" src="./images/img.jpg" alt="Програмирование" width="370">
                         <p class="services__text">Десктопные приложения</p>
                         </li>
                         <li class="services__item">
-                            <img class="services__img" src="./images/img(1).jpg" alt="Програморование под мобильние устройства" width="370">
+                            <img srcset="./images/img(1).jpg 1x, ./images/img(1)_2x.jpg 2x" class="services__img" src="./images/img(1).jpg" alt="Програморование под мобильние устройства" width="370">
                             <p class="services__text">Десктопные приложения</p>
                         </li>
                         <li class="services__item">
-                            <img class="services__img" src="./images/img(2).jpg" alt="Дизайн" width="370">
+                            <img srcset="./images/img(2).jpg 1x, ./images/img(2)_2x.jpg 2x" class="services__img" src="./images/img(2).jpg" alt="Дизайн" width="370">
                             <p class="services__text">Десктопные приложения</p>
                         </li>                        
                     </ul>
@@ -157,8 +157,8 @@
                             <picture>
                                 <source srcset="./images/max_1200/igor-min.jpg 1x, ./images/max_1200/igor_2x-min.jpg 2x" media="(min-width: 1200px)">
                                 <source srcset="./images/max_768/igor-min.jpg 1x, ./images/max_768/igor_2x-min.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./images/max_480/igor-min.jpg 1x, ./images/max_480/igor_2x-min.jpg 2x" media="(min-width: 480px)">
-                                <img src="./images/max_480/igor-min.jpg" alt="Игорь Демьяненко" width="100%" height="100%">
+                                <source srcset="./images/max_480/igor.jpg 1x, ./images/max_480/igor_2x.jpg 2x" media="(min-width: 480px)">
+                                <img src="./images/max_480/igor.jpg" alt="Игорь Демьяненко" width="100%" height="100%">
                             </picture>
                             <div class="team__block">
                                 <h3 class="team__block-title">Игорь Демьяненко</h3>
@@ -199,8 +199,8 @@
                             <picture>
                                 <source srcset="./images/max_1200/olga-min.jpg 1x, ./images/max_1200/olga_2x-min.jpg 2x" media="(min-width: 1200px)">
                                 <source srcset="./images/max_768/olga-min.jpg 1x, ./images/max_768/olga_2x-min.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./images/max_480/olga-min.jpg 1x, ./images/max_480/olga_2x-min.jpg 2x" media="(min-width: 480px)">
-                                <img src="./images/max_480/olga-min.jpg" alt="Ольга Репина" width="100%" height="100%">
+                                <source srcset="./images/max_480/olga.jpg 1x, ./images/max_480/olga_2x.jpg 2x" media="(min-width: 480px)">
+                                <img src="./images/max_480/olga.jpg" alt="Ольга Репина" width="100%" height="100%">
                             </picture>
                             <div class="team__block">
                                 <h3 class="team__block-title">Ольга Репина</h3>
@@ -241,8 +241,8 @@
                             <picture>
                                 <source srcset="./images/max_1200/nikolay-min.jpg 1x, ./images/max_1200/nikolay_2x-min.jpg 2x" media="(min-width: 1200px)">
                                 <source srcset="./images/max_768/nikolay-min.jpg 1x, ./images/max_768/nikolay_2x-min.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./images/max_480/nikolay-min.jpg 1x, ./images/max_480/nikolay_2x-min.jpg 2x" media="(min-width: 480px)">
-                                <img src="./images/max_480/nikolay-min.jpg" alt="Николай Тарасов" width="100%" height="100%">
+                                <source srcset="./images/max_480/nikolay.jpg 1x, ./images/max_480/nikolay_2x.jpg 2x" media="(min-width: 480px)">
+                                <img src="./images/max_480/nikolay.jpg" alt="Николай Тарасов" width="100%" height="100%">
                             </picture>
                             <div class="team__block">
                                 <h3 class="team__block-title">Николай Тарасов</h3>
@@ -283,8 +283,8 @@
                             <picture>
                                 <source srcset="./images/max_1200/mihail-min.jpg 1x, ./images/max_1200/mihail_2x-min.jpg 2x" media="(min-width: 1200px)">
                                 <source srcset="./images/max_768/mihail-min.jpg 1x, ./images/max_768/mihail_2x-min.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./images/max_480/mihail-min.jpg 1x, ./images/max_480/mihail_2x-min.jpg 2x" media="(min-width: 480px)">
-                                <img src="./images/max_480/mihail-min.jpg" alt="Михаил Ермаков" width="100%" height="100%">
+                                <source srcset="./images/max_480/mihail.jpg 1x, ./images/max_480/mihail_2x.jpg 2x" media="(min-width: 480px)">
+                                <img src="./images/max_480/mihail.jpg" alt="Михаил Ермаков" width="100%" height="100%">
                             </picture>
                             <div class="team__block">
                                 <h3 class="team__block-title">Михаил Ермаков</h3>
