Виправлені картинки в портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <!--<main>
         <section class="section">
             <div class="container">
                 <h1 class="title-none"></h1>
@@ -113,7 +113,7 @@
                             <a class="portfolio__link" href="#">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/Технокряк.jpg 1x, ./images/Технокряк_2х 2x" src="./images/Технокряк.jpg" width="370" height="294" alt="Технокряк">
+                                        <img srcset="./images/Технокряк.jpg 1x, ./images/Технокряк_2х 2x" src="./images/Технокряк.jpg" width="100%" height="100%" alt="Технокряк">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -128,7 +128,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/New_Orlean_vs_Golden_Star.jpg 1x, ./images/New_orlean_vs_2x 2x" src="./images/New_Orlean_vs_Golden_Star.jpg" width="370" height="294" alt="дизайн New_Orlean_vs_Golden_Star">
+                                        <img srcset="./images/New_Orlean_vs_Golden_Star.jpg 1x, ./images/New_orlean_vs_2x 2x" src="./images/New_Orlean_vs_Golden_Star.jpg" width="100%" height="100%" alt="дизайн New_Orlean_vs_Golden_Star">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -143,7 +143,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/Seafood.jpg 1x, ./images/Seafood.jpg 2x" src="./images/Seafood.jpg" width="370" height="294" alt="Ресторан Seafoodк">
+                                        <img srcset="./images/Seafood.jpg 1x, ./images/Seafood.jpg 2x" src="./images/Seafood.jpg" width="100%" height="100%" alt="Ресторан Seafoodк">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -158,7 +158,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/prime.jpg 1x, ./images/prime_2x 2x" src="./images/prime.jpg" width="370" height="294" alt="Проект prime">
+                                        <img srcset="./images/prime.jpg 1x, ./images/prime_2x 2x" src="./images/prime.jpg" width="100%" height="100%" alt="Проект prime">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -173,7 +173,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/boxes.jpg 1x, ./images/boxes_2x-min 2x" src="./images/boxes.jpg" width="370" height="294" alt="Проект Boxes">
+                                        <img srcset="./images/boxes.jpg 1x, ./images/boxes_2x-min 2x" src="./images/boxes.jpg" width="100%" height="100%" alt="Проект Boxes">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -188,7 +188,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/inspiration_has_no_Borders.jpg 1x, ./images/inspiration_has_no_Borders_2x.jpg 2x" src="./images/inspiration_has_no_Borders.jpg" width="370" height="294" alt="сайт inspiration has no Borders">
+                                        <img srcset="./images/inspiration_has_no_Borders.jpg 1x, ./images/inspiration_has_no_Borders_2x.jpg 2x" src="./images/inspiration_has_no_Borders.jpg" width="100%" height="100%" alt="сайт inspiration has no Borders">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -203,7 +203,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/Limited_Edition.jpg 1x, ./images/Limited_Edition_2x.jpg 2x" src="./images/Limited_Edition.jpg" width="370" height="294" alt="Издание Limited Edition">
+                                        <img srcset="./images/Limited_Edition.jpg 1x, ./images/Limited_Edition_2x.jpg 2x" src="./images/Limited_Edition.jpg" width="100%" height="100%" alt="Издание Limited Edition">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -218,7 +218,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/lab.jpg 1x, ./images/Lab_2x.jpg 2x" src="./images/lab.jpg" width="370" height="294" alt="Проект LAB">
+                                        <img srcset="./images/lab.jpg 1x, ./images/Lab_2x.jpg 2x" src="./images/lab.jpg" width="100%" height="100%" alt="Проект LAB">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -233,7 +233,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden"> 
                                     <div class="portfolio__block">
-                                        <img srcset="./images/Growing_business.jpg 1x, ./images/Growing_business_2x.jpg 2x" src="./images/Growing_business.jpg" width="370" height="294" alt="Приложение Growing business">
+                                        <img srcset="./images/Growing_business.jpg 1x, ./images/Growing_business_2x.jpg 2x" src="./images/Growing_business.jpg" width="100%" height="100%" alt="Приложение Growing business">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -312,7 +312,7 @@
                 </div>
             </form>
         </div>
-    </footer>
+    </footer>-->
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
 </body>
