--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
                 <button type="button" class="menu-open">O</button>
             </div>
             <div class="mobile-nav is-hidden">
-                <div class="container container__menu">
+              <div class="container">
                 <button type="button" class="menu-close">X</button>
                 <nav>
                     <ul class="mobile-menu list">
                         <li class="mobile-menu__item">
-                            <a href="./index.html" class="mobile-menu__link link">cтудия</a>
+                            <a href="" class="mobile-menu__link link">Студия</a>
                         </li>
                         <li class="mobile-menu__item">
-                            <a href="./portfolio.html" class="mobile-menu__link link">портфолио</a>
+                            <a href="" class="mobile-menu__link link">Студия</a>
                         </li>
                         <li class="mobile-menu__item">
-                            <a href="#contacts" class="mobile-menu__link link">контакты</a>
+                            <a href="" class="mobile-menu__link link">Студия</a>
                         </li>
                     </ul>
                 </nav>
@@ -64,7 +64,7 @@
                             <a href="" class="mobile-contacts__link link">+38 096 111 11 11</a>
                         </li>
                         <li class="mobile-contacts__item">
-                            <a href="" class="mobile-contacts__link ">info@devstudio.com</a>
+                            <a href="" class="mobile-contacts__link link">info@devstudio.com</a>
                         </li>
                     </ul>
                     <ul class="mobile-media list">
@@ -72,7 +72,7 @@
                             <a href="" class="mobile-media__link link">Instagram</a>
                         </li>
                         <li class="mobile-media__item">
-                            <a href="" class="mobile-media__link link__phone">Twitter</a>
+                            <a href="" class="mobile-media__link link">Twitter</a>
                         </li>
                         <li class="mobile-media__item">
                             <a href="" class="mobile-media__link link">Facebook</a>
@@ -81,6 +81,9 @@
                             <a href="" class="mobile-media__link link">Facebook</a>
                         </li>
                     </ul>
+                </div>
+            </div>
+            </div>
         </header>
         <main>
             <section class="hero">
