--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </header>
-    <!--<main>
+    <main>
         <section class="section">
             <div class="container">
                 <h1 class="title-none"></h1>
@@ -312,7 +312,7 @@
                 </div>
             </form>
         </div>
-    </footer>-->
+    </footer>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
 </body>
