--- a/index.html
+++ b/index.html
@@ -40,36 +40,43 @@
                         </a>
                     </li>
                 </ul>
-                <button type="button" class="menu-open">O</button>
+                <button type="button" class="menu-open">
+                    <svg width="24" height="16">
+                        <use href="./images/sprite.svg#icon-menu"></use>
+                    </svg>
+                </button>
             </div>
             <div class="mobile-nav is-hidden">
-              <div class="container">
-                <button type="button" class="menu-close">X</button>
+                <button type="button" class="menu-close">
+                    <svg width="18.67" height="18.67">
+                        <use href="./images/sprite.svg#icon-close"></use>
+                    </svg>
+                </button>
                 <nav>
                     <ul class="mobile-menu list">
                         <li class="mobile-menu__item">
-                            <a href="" class="mobile-menu__link link">Студия</a>
+                            <a href="./index.html" class="mobile-menu__link current">студия</a>
                         </li>
                         <li class="mobile-menu__item">
-                            <a href="" class="mobile-menu__link link">Студия</a>
+                            <a href="./portfolio.html" class="mobile-menu__link">портфолио</a>
                         </li>
                         <li class="mobile-menu__item">
-                            <a href="" class="mobile-menu__link link">Студия</a>
+                            <a href="#contacts" class="mobile-menu__link">контакты</a>
                         </li>
                     </ul>
                 </nav>
                 <div class="mobile-nav__bottom">
                     <ul class="mobile-contacts list">
                         <li class="mobile-contacts__item">
-                            <a href="" class="mobile-contacts__link link">+38 096 111 11 11</a>
+                            <a href="" class="mobile-contacts__link">+38 096 111 11 11</a>
                         </li>
                         <li class="mobile-contacts__item">
-                            <a href="" class="mobile-contacts__link link">info@devstudio.com</a>
+                            <a href="" class="mobile-contacts__link mobile-contacts__link-email">info@devstudio.com</a>
                         </li>
                     </ul>
                     <ul class="mobile-media list">
                         <li class="mobile-media__item">
-                            <a href="" class="mobile-media__link link">Instagram</a>
+                            <a href="" class="mobile-media__link">Instagram</a>
                         </li>
                         <li class="mobile-media__item">
                             <a href="" class="mobile-media__link link">Twitter</a>
@@ -82,7 +89,6 @@
                         </li>
                     </ul>
                 </div>
-            </div>
             </div>
         </header>
         <main>
