--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,14 @@
             <nav class="header__nav">
                 <a class="header__logo" href="./index.html"><span class="header__logo-color">web</span>Studio</a>
                 <ul class="menu">
-                    <li class="menu__item"><a class="menu__link" href="./index.html">студия</a></li>
-                    <li class="menu__item"><a class="menu__link current" href="./portfolio.html">портфолио</a></li>
+                    <li class="menu__item"><a class="menu__link current" href="./index.html">студия</a></li>
+                    <li class="menu__item"><a class="menu__link" href="./portfolio.html">портфолио</a></li>
                     <li class="menu__item"><a class="menu__link" href="#contacts">контакты</a></li>
                 </ul>
             </nav>
             <ul class="contact">
                 <li class="contact__item">
-                    <a class="contact__link" href="mailto:info@devstudio.com">
+                    <a class="contact__link icon-envelope" href="mailto:info@devstudio.com">
                         <svg class="contact__icon" width="16" height="12">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li class="contact__item">
-                    <a class="contact__link" href="tel:+380961111111">
+                    <a class="contact__link smartphon" href="tel:+380961111111">
                         <svg class="contact__icon" width="10" height="16">
                             <use href="./images/sprite.svg#icon-phone"></use>
                         </svg>
@@ -40,36 +40,43 @@
                     </a>
                 </li>
             </ul>
-            <button type="button" class="menu-open">O</button>
+            <button type="button" class="menu-open">
+                <svg width="24" height="16">
+                    <use href="./images/sprite.svg#icon-menu"></use>
+                </svg>
+            </button>
         </div>
-    <div class="mobile-nav is-hidden">
-        <div class="container container__menu">
-            <button type="button" class="menu-close">X</button>
+        <div class="mobile-nav is-hidden">
+            <button type="button" class="menu-close">
+                <svg width="18.67" height="18.67">
+                    <use href="./images/sprite.svg#icon-close"></use>
+                </svg>
+            </button>
             <nav>
                 <ul class="mobile-menu list">
                     <li class="mobile-menu__item">
-                        <a href="./index.html" class="mobile-menu__link link">cтудия</a>
+                        <a href="./index.html" class="mobile-menu__link">студия</a>
                     </li>
                     <li class="mobile-menu__item">
-                        <a href="./portfolio.html" class="mobile-menu__link link">портфолио</a>
+                        <a href="./portfolio.html" class="mobile-menu__link current">портфолио</a>
                     </li>
                     <li class="mobile-menu__item">
-                        <a href="#contacts" class="mobile-menu__link link">контакты</a>
+                        <a href="#contacts" class="mobile-menu__link">контакты</a>
                     </li>
                 </ul>
             </nav>
             <div class="mobile-nav__bottom">
                 <ul class="mobile-contacts list">
                     <li class="mobile-contacts__item">
-                        <a href="" class="mobile-contacts__link link">+38 096 111 11 11</a>
+                        <a href="" class="mobile-contacts__link">+38 096 111 11 11</a>
                     </li>
                     <li class="mobile-contacts__item">
-                        <a href="" class="mobile-contacts__link link">info@devstudio.com</a>
+                        <a href="" class="mobile-contacts__link mobile-contacts__link-email">info@devstudio.com</a>
                     </li>
                 </ul>
                 <ul class="mobile-media list">
                     <li class="mobile-media__item">
-                        <a href="" class="mobile-media__link link">Instagram</a>
+                        <a href="" class="mobile-media__link">Instagram</a>
                     </li>
                     <li class="mobile-media__item">
                         <a href="" class="mobile-media__link link">Twitter</a>
@@ -113,7 +120,7 @@
                             <a class="portfolio__link" href="#">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/Технокряк.jpg 1x, ./images/Технокряк_2х 2x" src="./images/Технокряк.jpg" width="100%" height="100%" alt="Технокряк">
+                                        <img srcset="./images/tehno.jpg 1x, ./images/tehno_2x.jpg 2x" src="./images/Технокряк.jpg" width="100%" height="100%" alt="Технокряк">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -128,7 +135,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/New_Orlean_vs_Golden_Star.jpg 1x, ./images/New_orlean_vs_2x 2x" src="./images/New_Orlean_vs_Golden_Star.jpg" width="100%" height="100%" alt="дизайн New_Orlean_vs_Golden_Star">
+                                        <img srcset="./images/New_Orlean_vs_Golden_Star.jpg 1x, ./images/New_orlean_vs_2x.jpg 2x" src="./images/New_Orlean_vs_Golden_Star.jpg" width="100%" height="100%" alt="дизайн New_Orlean_vs_Golden_Star">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -143,7 +150,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/Seafood.jpg 1x, ./images/Seafood.jpg 2x" src="./images/Seafood.jpg" width="100%" height="100%" alt="Ресторан Seafoodк">
+                                        <img srcset="./images/Seafood.jpg 1x, ./images/Seafood_2x.jpg 2x" src="./images/Seafood.jpg" width="100%" height="100%" alt="Ресторан Seafoodк">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -158,7 +165,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/prime.jpg 1x, ./images/prime_2x 2x" src="./images/prime.jpg" width="100%" height="100%" alt="Проект prime">
+                                        <img srcset="./images/prime.jpg 1x, ./images/prime_2x.jpg 2x" src="./images/prime.jpg" width="100%" height="100%" alt="Проект prime">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -173,7 +180,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/boxes.jpg 1x, ./images/boxes_2x-min 2x" src="./images/boxes.jpg" width="100%" height="100%" alt="Проект Boxes">
+                                        <img srcset="./images/boxes.jpg 1x, ./images/boxes_2x-min.jpg 2x" src="./images/boxes.jpg" width="100%" height="100%" alt="Проект Boxes">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -218,7 +225,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden">
                                     <div class="portfolio__block">
-                                        <img srcset="./images/lab.jpg 1x, ./images/Lab_2x.jpg 2x" src="./images/lab.jpg" width="100%" height="100%" alt="Проект LAB">
+                                        <img srcset="./images/lab.jpg 1x, ./images/lab_2x.jpg 2x" src="./images/lab.jpg" width="100%" height="100%" alt="Проект LAB">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
@@ -233,7 +240,7 @@
                             <a href="#" class="portfolio__link">
                                 <div class="portfolio__hidden"> 
                                     <div class="portfolio__block">
-                                        <img srcset="./images/Growing_business.jpg 1x, ./images/Growing_business_2x.jpg 2x" src="./images/Growing_business.jpg" width="100%" height="100%" alt="Приложение Growing business">
+                                        <img srcset="./images/Growing_business.jpg 1x, ./images/Growing_business_2x-min.jpg 2x" src="./images/Growing_business.jpg" width="100%" height="100%" alt="Приложение Growing business">
                                     </div>
                                 </div>
                                 <div class="portfolio__info">
